<resources>
    <string name="app_name">College Basketball Coach</string>
    <string name="shared_pref_disp_scoring">com.coaching.show_scoring</string>
    <string name="shared_pref_disp_cop">com.coaching.show_cop</string>
    <string name="shared_pref_disp_fouls">com.coaching.show_fouls</string>
    <string name="shared_pref_disp_misc">com.coaching.show_misc</string>
    <string name="shared_pref_alert_dead_ball">com.coaching.alert_dead_ball</string>
    <string name="shared_pref_never_opened">com.coaching.never_opened</string>
    <string name="shared_pref_recruit_sort">com.coaching.recruit_sort</string>
    <string name="new_game_button">New Game</string>
    <string name="load_game_button">Load Game</string>
    <string name="help_button">Help</string>
    <string name="team_creator">Create your team!</string>
    <string name="school_name_prompt">School name</string>
    <string name="mascot_name">Mascot</string>
    <string name="coach_name">Coach name</string>
    <string name="team_rating">Team rating: %d</string>
    <string name="conference">Team\'s conference</string>
    <string name="conference_rating">Conference ratings</string>
    <string name="radio_team">Strength of Team</string>
    <string name="radio_conference">Strength of Conference</string>
    <string name="good">Good</string>
    <string name="normal">Normal</string>
    <string name="poor">Poor</string>
    <string-array name="conference_names">
        <item>Northeast Athletic Conference</item>
        <item>Great Lakes Conference</item>
        <item>Tobacco Conference</item>
        <item>Gulf Coast Conference</item>
        <item>Desert Conference</item>
        <item>Mountain Athletic Association</item>
        <item>Middle America Conference</item>
        <item>California Conference</item>
        <item>Western Conference</item>
        <item>Atlantic Athletic Association</item>
        <item>Canadian Athletic Conference</item>
    </string-array>
    <string name="color_spinner_label">School color</string>
    <string-array name="colors">
        <item>Red</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Deep Purple</item>
        <item>Indigo</item>
        <item>Blue</item>
        <item>Light Blue</item>
        <item>Cyan</item>
        <item>Teal</item>
        <item>Green</item>
        <item>Light Green</item>
        <item>Yellow</item>
        <item>Orange</item>
        <item>Deep Orange</item>
        <item>Blue Grey</item>
    </string-array>
    <string-array name="drawer_items">
        <item>Roster</item>
        <item>Schedule</item>
        <item>Standings</item>
        <item>Recruiting</item>
        <item>Strategy</item>
        <item>Staff</item>
        <item>Training</item>
    </string-array>
    <string name="drawer_open">open</string>
    <string name="drawer_closed">closed</string>
    <string name="roster_title">%s Roster</string>
    <string name="position">Start</string>
    <string name="name">Name</string>
    <string name="year">Class</string>
    <string name="rating">Rating</string>
    <string name="pref_position">Pos.</string>
    <string name="standing_title">Standings</string>
    <string name="school_name">School</string>
    <string name="conf_record">Conf.\nW-L</string>
    <string name="overall_record">Overall\nW-L</string>
    <string name="rpi">RPI</string>
    <string name="record_string">%d-%d</string>
    <string name="wins">Wins</string>
    <string name="loses">Loses</string>
    <string-array name="off_attributes">
        <item>Close Range Shot: </item>
        <item>Mid Range Shot: </item>
        <item>Long Range Shot: </item>
        <item>Free Throws: </item>
        <item>Post Moves: </item>
        <item>Ball Handling: </item>
        <item>Passing: </item>
        <item>Screening: </item>
        <item>Off Ball Movement: </item>
    </string-array>
    <string-array name="def_attributes">
        <item>Post Defense: </item>
        <item>Perimeter Defense: </item>
        <item>On Ball Defense: </item>
        <item>Off Ball Defense: </item>
        <item>Stealing: </item>
        <item>Rebounding: </item>
    </string-array>
    <string-array name="other_attributes">
        <item>Stamina: </item>
        <item>Aggressiveness: </item>
        <item>Work Ethic: </item>
    </string-array>
    <string name="stats">Statistics</string>
    <string name="games_played">Games played: %d</string>
    <string name="total_minutes">Minutes played: %d</string>
    <string name="rating_at_pos">PG: %d SG: %d SF: %d PF: %d C: %d</string>
    <string name="player_name_pos">%s - %s</string>
    <string-array name="player_info_spinner">
        <item>Offensive Attributes</item>
        <item>Defensive Attributes</item>
        <item>Other Attributes</item>
        <item>Game Stats</item>
    </string-array>
    <string name="season_name">%s %d-%d Season</string>
    <string name="sim_game">Sim next game!</string>
    <string name="new_season">Start new season</string>
    <string name="start_tournament">Start tournament!</string>
    <string name="team_tourn">#%d %s</string>
    <string name="enter_tourn">View conference tournament</string>
    <string name="enter_champ">View National Championship</string>
    <string name="home_name">\@ %s</string>
    <string name="no_score">-</string>
    <string name="pregame_info">Game #%d</string>
    <string name="game_in_progress">Game in progress</string>
    <string name="postgame_info">Final</string>
    <string name="postgame_ot">Final OT</string>
    <string name="strategy_title">%s Strategy</string>
    <string name="offense">Offense</string>
    <string name="defense">Defense</string>
    <string name="favor_three">Favors threes</string>
    <string name="pace">Pace</string>
    <string name="aggression">Aggression</string>
    <string name="slower">Slower</string>
    <string name="faster">Faster</string>
    <string name="more_three">More threes</string>
    <string name="few_three">Fewer threes</string>
    <string name="more_agro">More aggressive</string>
    <string name="less_agro">Less aggressive</string>
    <string name="intentional_foul">Intentionally Foul</string>
    <string name="training_title">%s Training Plan</string>
    <string name="training_desc">Currently training as: %s</string>
    <string name="training">Currently training as:</string>
    <string-array name="training_types">
        <item>Guard</item>
        <item>Big</item>
        <item>Point Guard</item>
        <item>Shooting Guard</item>
        <item>Small Forward</item>
        <item>Power Forward</item>
        <item>Center</item>
        <item>3-point specialist</item>
        <item>Rebound specialist</item>
        <item>Defensive specialist</item>
        <item>Energy guy</item>
    </string-array>
    <string name="staff_title">%s Staff</string>
    <string name="coach_name_pos">%s - %s</string>
    <string name="coach_attributes">Coaching Attributes</string>
    <string name="recruit_ability">Recruiting Ability: %d</string>
    <string name="shot_teach">Shooting: %d</string>
    <string name="screen_teach">Screening: %d</string>
    <string name="ball_handle">Ball Handling: %d</string>
    <string name="off_move">Off Ball Movement: %d</string>
    <string name="positioning">Defensive Positioning: %d</string>
    <string name="on_ball_teach">On Ball Defense: %d</string>
    <string name="off_ball_teach">Off Ball Defense: %d</string>
    <string name="rebound_teach">Rebounding: %d</string>
    <string name="steal_teach">Stealing: %d</string>
    <string name="condition_teaching">Conditioning: %d</string>
    <string name="recruiting_title">%s Recruiting</string>
    <string name="recruit_interest">Interest</string>
    <string name="recruit">Tap to recruit this player</string>
    <string name="stop_recruit">Being recruited by %s</string>
    <string name="alert_title">Select a coach to recruit this player</string>
    <string name="warn_unrecruit">Stop recruiting this player?</string>
    <string name="committed">This player has committed to your team!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sort_position">Sort by position</string>
    <string name="sort_rating">Sort by rating</string>
    <string name="sort_status">Sort by recruitment status</string>
    <string name="sort_interest">Sort by interest</string>
    <string name="position_needs">Returning players by position\nPG: %d SG: %d SF: %d PF: %d C: %d</string>
    <string name="timeout">Call timeout</string>
    <string name="end_timeout">Return to game</string>
    <string name="start_game">Start game</string>
    <string name="start_2nd">Start 2nd half</string>
    <string name="scores">%d</string>
    <string name="half">Half: %d</string>
    <string name="game_time">%s (%d)</string>
    <string name="game_speed">Simulation speed</string>
    <string name="sim_paused">Simulation is currently paused</string>
    <string name="timeout_left">T: %d</string>
    <string name="team_fouls">F: %d</string>
    <string name="fouled_out">One of your players has fouled out!\nPlease select a substitute.</string>
    <string name="alert_dead_ball">Dead ball!\nMake any desired changes before pressing continue.</string>
    <string name="alert_foul_trouble">One or more of your players may be in foul trouble!</string>
    <string name="timeout_instruction">A timeout has been called.\nMake any desired changes before speaking to your players.</string>
    <string name="pre_game_instruction">Address your players before starting the half.</string>
    <string name="floor_pos">Floor</string>
    <string name="pref_pos">Pref.</string>
    <string name="condition">Cond.</string>
    <string name="fouls">Fouls</string>
    <string name="two_point">2FG</string>
    <string name="three_point">3FG</string>
    <string name="free_throw">FT</string>
    <string name="assists">Assists</string>
    <string name="o_board">OB</string>
    <string name="d_board">DB</string>
    <string name="steals">Steals</string>
    <string name="to">TO</string>
    <string name="view_options">Change displayed events</string>
    <string name="pause_option">Pause during dead balls</string>
    <string name="unpause_option">Don\'t pause during dead balls</string>
    <string-array name="timeout_array">
        <item>Skip speech</item>
        <item>Good work guys! Keep it up!</item>
        <item>Show me something else!</item>
        <item>I need you guys to focus on defense!</item>
        <item>Let\'s try to get some more shots to fall now!</item>
    </string-array>
    <string-array name="pre_game_speeches">
        <item>Skip speech</item>
        <item>If you just play your natural game, we will win.</item>
        <item>We\'re going to have to work extra hard if we expect to pull this one off.</item>
        <item>If you play hard on the defensive end, we\'ll get the result we\'re after.</item>
        <item>You will have to make some shots to win this one.</item>
    </string-array>
    <string-array name="game_roster_spinner">
        <item>Selection Information</item>
        <item>Offensive Stats</item>
        <item>Defensive Stats</item>
    </string-array>
    <string name="game_options_prompt">Select the types of plays to display</string>
    <string-array name="game_view_options">
        <item>Point scoring plays</item>
        <item>Change of possession</item>
        <item>Fouls</item>
        <item>Miscellaneous plays</item>
    </string-array>
    <string name="list_score">%s: %d - %s: %d</string>
</resources>