<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/game_roster_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pos_label"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/floor_pos"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textSize="16sp"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/label1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/pref_pos"/>

        <TextView
            android:id="@+id/label2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingEnd="8dp"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/condition"/>

        <TextView
            android:id="@+id/label3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingEnd="8dp"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/rating"/>

        <TextView
            android:id="@+id/label4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingEnd="8dp"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/fouls"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/roster_list"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>