<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.coaching.jphil.collegebasketballcoach.StartScreenActivity">

    <TextView
        android:paddingTop="36dp"
        android:textSize="46sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/colorAccent"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/app_name"/>

    <Button
        android:id="@+id/new_game_button"
        android:layout_marginTop="56dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:textSize="25sp"
        android:background="@color/colorPrimary"
        android:text="@string/new_game_button"/>

    <Button
        android:id="@+id/load_game_button"
        android:layout_marginTop="26dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:textSize="25sp"
        android:background="@color/colorPrimary"
        android:visibility="gone"
        android:text="@string/load_game_button"/>

    <Button
        android:id="@+id/info_button"
        android:layout_marginTop="26dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:textSize="25sp"
        android:background="@color/colorPrimary"
        android:text="@string/help_button"/>

</LinearLayout>